# c-socket-demo

./: CMakeLists.txt  readme.md
getaddrinfo-demo/: main.c  readme.md
tcp-demo/: client.c  server.c  tcp-client.py  tcp-multi-client.py  tcp-select-server.c
udp-demo/: udp-client.c  udp-client.py  udp-select-server.c  udp-server.c  udp-server.py
